# astrbot_plugin_Auto_ddl_Detect

./: README.md  _conf_schema.json  main.py  metadata.yaml  pyproject.toml
lib/: __init__.py  detector.py  monitor.py  renderer.py  storage.py  summarizer.py  template.html  template.py  time_parser.py
src/autoddldetect/: __init__.py  silent_monitor.py
