[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoddldetect"
version = "1.2.0"
description = "AutoDDLDetect - AstrBot 群聊 DDL 自动检测与展示插件"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "AGPL-3.0"}
authors = [
    {name = "FarasMoon"}
]
keywords = ["astrbot", "plugin", "ddl", "deadline"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: AGPL-3.0",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/FarasMoon/astrbot_plugin_Auto_ddl_Detect"
Repository = "https://github.com/FarasMoon/astrbot_plugin_Auto_ddl_Detect"
Issues = "https://github.com/FarasMoon/astrbot_plugin_Auto_ddl_Detect/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["lib*"]

[tool.setuptools.package-data]
lib = ["*.html"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
